# heterogeneous-circle-formation

./: .gitmodules
formation_gazebo_worlds/: CMakeLists.txt  package.xml
formation_gazebo_worlds/config/: heterogeneous_formation_world.yaml
formation_gazebo_worlds/launch/: heterogeneous_formation_world.launch.py
formation_gazebo_worlds/models/land_box/: model.config  model.sdf
formation_gazebo_worlds/models/micro_ocean_box/: model.config  model.sdf
formation_gazebo_worlds/worlds/: heterogeneous_formation.world
formation_interfaces/: CMakeLists.txt  package.xml
formation_interfaces/action/: MoveQuad.action
formation_interfaces/srv/: UpdateCenter.srv
heterogeneous_formation/: CMakeLists.txt  package.xml
heterogeneous_formation/launch/: easy_formation.launch.py  formation_1.launch.py  formation_2.launch.py  quadrotor_landing_on_rexrov.launch.py  start_formation.launch.py  summon_diff_drive_robots.launch.py  summon_quadrotors.launch.py
heterogeneous_formation/src/: formation_2_auto_control.cpp  quadrotor_landing.cpp
quadrotor_control/: CMakeLists.txt  package.xml
quadrotor_control/config/: pids.yaml
quadrotor_control/include/quadrotor_control/: visibility_control.h
quadrotor_control/launch/: summon_quadrotors_with_position_control_server.launch.py  test.launch.py
quadrotor_control/src/: position_control_server.cpp
rexrov_formation/: CMakeLists.txt  package.xml
rexrov_formation/config/: formation_param.yaml
rexrov_formation/launch/: circle_formation_lifecycle.launch.py  summon_rexrov_with_acceleration_control.launch.py  summon_rexrov_with_velocity_control.launch.py  upload_rexrov_easy.launch.py
rexrov_formation/robots/: rexrov_easy.xacro
rexrov_formation/src/: circle_formation_lifecycle.cpp
rexrov_formation/urdf/: rexrov_base.xacro  rexrov_sensors.xacro
